# wordlebot

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md
src/: dictionary.rs  main.rs
