[package]
name = "webster"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
version = "1.0.0"
edition = "2021"

[dependencies]
rand = "0.8"
clap = { version = "3", features = ["derive"] }
itertools = "0.10"

[profile.release]
opt-level = 3
debug = false
lto = "thin"
debug-assertions = false
codegen-units = 1
