[package]
name = "wordlebot"
version = "1.0.2"
authors = ["Rich Neswold <rich.neswold@gmail.com>"]
edition = "2021"
description = "A program which tries to solve the daily Wordle puzzle."
readme = "README.md"
homepage = "https://github.com/rneswold/wordlebot"
repository = "https://github.com/rneswold/wordlebot/tree/master"
license = "BSD-3-Clause"
keywords = ["wordle", "puzzle"]
categories = ["command-line-utilities", "games"]

[dependencies]
rand = "0.8"
clap = { version = "3", features = ["derive", "env"] }
itertools = "0.10"

[profile.release]
opt-level = 3
debug = false
lto = "thin"
debug-assertions = false
codegen-units = 1
